--- a/carousel.css
+++ b/carousel.css
@@ -103,3 +103,18 @@ Párrafos:
 font-family: 'Lato', sans-serif;
 
 */
+
+/* == Elemento h1 == */
+
+
+#main-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+  margin-bottom: 40px;
+
+}
+
+
+
