--- a/carousel.css
+++ b/carousel.css
@@ -198,7 +198,6 @@ p{
 
 }
 
-
 .container .carousel-caption h1{
   color: var(--light-color1);
   text-shadow: 
@@ -215,4 +214,19 @@ p{
     1px 2px 4px var(--main-color),
     1px 0 6px var(--optional-color),
     2px 1px 10px var(--optional-color);
+}
+
+/* == CABECERA == */
+
+#navpage {
+  background: var(--secondary-color)!important;
+}
+
+.form-control{
+  background-color: var(--light-color1);
+  border: 4px solid var(--optional-color);
+}
+
+.form-control::placeholder { 
+  color: var(--main-color);
 }
