--- a/carousel.css
+++ b/carousel.css
@@ -251,3 +251,11 @@ p{
   border-radius: 50%;
   outline: 5px solid var(--light-color2);
 }
+
+/* == BOTÓN FLOTANTE == */
+
+#boton-flotante{
+  background:var(--light-color2);
+  border: 2px solid var(--light-color1);
+  box-shadow: 0px 0px 8px 1px var(--secondary-color);
+}
