--- a/carousel.css
+++ b/carousel.css
@@ -259,3 +259,21 @@ p{
   border: 2px solid var(--light-color1);
   box-shadow: 0px 0px 8px 1px var(--secondary-color);
 }
+
+/* == IMÁGENES 500x500 == */
+
+
+#square-image-1{
+  background: url(./assets/imgs/product2.jpg) no-repeat center;
+  background-size: cover;
+}
+
+#square-image-2{
+  background: url(./assets/imgs/product3.jpg) no-repeat center;
+  background-size: cover;
+}
+
+#square-image-3{
+  background: url(./assets/imgs/product1.jpg) no-repeat center;
+  background-size: cover;
+}
