--- a/carousel.css
+++ b/carousel.css
@@ -224,7 +224,11 @@ p{
 
 .form-control{
   background-color: var(--light-color1);
-  border: 4px solid var(--optional-color);
+  border: 2px solid var(--main-color);
+}
+
+.form-control:focus{
+  background: var(--main-color);
 }
 
 .form-control::placeholder { 
@@ -294,7 +298,90 @@ p{
 
 }
 
+.enlace-footer-back{
+  color: var(--light-color1);
+  text-decoration: none;
+  font-family: 'Lato', sans-serif;
+  font-weight: 600;
+  font-size: 0.9rem;
+}
 
+.enlace-footer-back:hover{
+  color: var(--main-color);
+}
+
+.enlace-header-1{
+  color: var(--light-color1);
+  font-family: 'Lato', sans-serif;
+  font-weight: 800;
+  font-size: 1rem;
+}
+
+.enlace-header-1:hover{
+  color: var(--main-color);
+  text-decoration: underline;
+}
+
+.enlace-img-products{
+  filter: none;
+}
+
+.enlace-img-products:hover{
+  filter: contrast(180%);
+}
+
+.boton-tipo-1{
+  font-family: 'Lato', sans-serif;
+  color: var(--light-color1);
+  background: var(--main-color);
+  border: 3px solid var(--main-color);
+  box-shadow: 0px 0px 12px 2px var(--light-color1);
+  font-weight: 600;
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: ease-in-out;
+}
+
+.boton-tipo-1:hover{
+  color: var(--main-color);
+  background: var(--light-color1);
+  box-shadow: 0px 0px 20px 1px var(--optional-color); 
+}
+
+.boton-tipo-2{
+  font-family: 'Lato', sans-serif;
+  color: var(--light-color1);
+  background: var(--secondary-color);
+  outline: 1px solid var(--secondary-color);
+  font-weight: 600;
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: ease-in-out;
+}
+
+.boton-tipo-2:hover{
+  background: var(--light-color2);
+}
+
+.boton-tipo-3{
+  font-family: 'Lato', sans-serif;
+  color: var(--light-color1);
+  border: 1px solid var(--light-color1);
+  font-weight: 600;
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: ease-in-out;
+}
+
+.boton-tipo-3:hover{
+  background: var(--main-color);
+}
+
+.container-fluid img{
+
+  margin-right: 30px;
+
+}
 
 /* == FOOTER == */
 
